Add total budget to date to financials summary
Includes a style override to make the summary a bit more readable on a
desktop.

--- a/app/assets/stylesheets/partials/_definition_list.scss
+++ b/app/assets/stylesheets/partials/_definition_list.scss
@@ -7,3 +7,16 @@
     }
   }
 }
+
+.financial-summary {
+  .govuk-summary-list__key {
+    @include govuk-media-query($from: desktop) {
+      width: 50%;
+    }
+  }
+  .govuk-summary-list__value {
+    @include govuk-media-query($from: desktop) {
+      text-align: right;
+    }
+  }
+}
