Generate sector category hint with helper
Generate the guidance link with the new helper.

The `level` parameter was removed from the sector category hint in commit 708909b1ed0223676403d0665bcff63e052fbebd, so it can be safely removed from the view.

Add the magic `_html` suffix to the translation key, to remove the need to call `html_safe` on it.

Co-authored-by: robbiepaul <robbie.paul@dxw.com>

--- a/app/views/staff/activity_forms/sector_category.html.haml
+++ b/app/views/staff/activity_forms/sector_category.html.haml
@@ -6,4 +6,4 @@
     :code,
     :name,
     legend: { tag: "h1", size: "xl", text: t("form.legend.activity.sector_category", level: t("page_content.activity.level.#{f.object.level}")) },
-    hint: { text: t("form.hint.activity.sector_category", level: t("page_content.activity.level.#{f.object.level}")).html_safe }
+    hint: { text: t("form.hint.activity.sector_category_html", link: link_to_new_window("CRS purpose codes", "https://www.oecd.org/dac/stats/documentupload/2015%20CRS%20purpose%20codes%20EN_updated%20April%202016.pdf")) }
