Open the data dictionary in a new window
User research showed that people expected the guidance link to open in a new window, and were surprised and worried by it opening in the same window as the form they were in the process of filling in.

Co-authored-by: robbiepaul <robbie.paul@dxw.com>

--- a/app/views/staff/activity_forms/_wrapper.html.haml
+++ b/app/views/staff/activity_forms/_wrapper.html.haml
@@ -12,6 +12,5 @@
 
       %p.govuk-body
         Please refer to the
-        %a{href: "https://beisodahelp.zendesk.com/hc/en-gb/articles/360058280774-RODA-Data-Dictionary-includes-field-labels-definitions-and-reporting-requirements"}
-          data dictionary
+        = link_to_new_window("data dictionary", "https://beisodahelp.zendesk.com/hc/en-gb/articles/360058280774-RODA-Data-Dictionary-includes-field-labels-definitions-and-reporting-requirements")
         if you're unsure what information to enter above.
