--- a/app/views/pages/accessibility_statement.html.haml
+++ b/app/views/pages/accessibility_statement.html.haml
@@ -21,7 +21,7 @@
       %p.govuk-body
         We’ve also made the service text as simple as possible to understand.
       %p.govuk-body
-        = link_to_new_window("AbilityNet", "https://mcmw.abilitynet.org.uk/")
+        = link_to_new_tab("AbilityNet", "https://mcmw.abilitynet.org.uk/")
         has advice on making your device easier to use if you have a disability"
 
       %h2.govuk-heading-m
@@ -34,7 +34,7 @@
         Enforcement procedure
       %p.govuk-body
         The Equality and Human Rights Commission (EHRC) is responsible for enforcing the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018 (the ‘accessibility regulations’). If you’re not happy with how we respond to your complaint,
-        = link_to_new_window("contact the Equality Advisory and Support Service (EASS)", "https://www.equalityadvisoryservice.com/")
+        = link_to_new_tab("contact the Equality Advisory and Support Service (EASS)", "https://www.equalityadvisoryservice.com/")
       %h2.govuk-heading-m
         Technical information about this service’s accessibility
       %p.govuk-body
@@ -43,7 +43,7 @@
         Compliance status
       %p.govuk-body
         This service is fully compliant with the
-        = link_to_new_window("Web Content Accessibility Guidelines version 2.1", "https://www.w3.org/TR/WCAG21/")
+        = link_to_new_tab("Web Content Accessibility Guidelines version 2.1", "https://www.w3.org/TR/WCAG21/")
         AAA  standard.
       %p.govuk-body
         The service is being iterated and we will update this statement with details of any accessibility issues with new features.
@@ -53,7 +53,7 @@
         This statement was prepared on 17 June 2020. It was last reviewed on 18 June 2020.
       %p.govuk-body
         This service was last tested on 31 March 2020. The test was carried out by the
-        = link_to_new_window("Digital Accessibility Centre", "https://digitalaccessibilitycentre.org/")
+        = link_to_new_tab("Digital Accessibility Centre", "https://digitalaccessibilitycentre.org/")
       %p.govuk-body
         The service was assessed against the Web Content Accessibility Guidelines WCAG 2.1.
 
