--- a/app/views/staff/activity_forms/_wrapper.html.haml
+++ b/app/views/staff/activity_forms/_wrapper.html.haml
@@ -12,5 +12,5 @@
 
       %p.govuk-body
         Please refer to the
-        = link_to_new_window("data dictionary", "https://beisodahelp.zendesk.com/hc/en-gb/articles/360058280774-RODA-Data-Dictionary-includes-field-labels-definitions-and-reporting-requirements")
+        = link_to_new_tab("data dictionary", "https://beisodahelp.zendesk.com/hc/en-gb/articles/360058280774-RODA-Data-Dictionary-includes-field-labels-definitions-and-reporting-requirements")
         if you're unsure what information to enter above.
