--- a/app/views/staff/activity_forms/channel_of_delivery_code.html.haml
+++ b/app/views/staff/activity_forms/channel_of_delivery_code.html.haml
@@ -1,7 +1,6 @@
 = render layout: "wrapper" do |f|
-  = f.govuk_collection_select :channel_of_delivery_code,
-                              channel_of_delivery_code_select_options,
-                              :code,
-                              :name,
-                              options: { selected: f.object.channel_of_delivery_code },
-                              label: { tag: 'h1', size: 'xl' }
+  = f.govuk_collection_radio_buttons :channel_of_delivery_code,
+                                      channel_of_delivery_codes,
+                                      :code,
+                                      :name,
+                                      legend: { tag: 'h1', size: 'xl', text: t("form.legend.activity.channel_of_delivery_code") }
