--- a/app/views/staff/activity_forms/policy_markers.html.haml
+++ b/app/views/staff/activity_forms/policy_markers.html.haml
@@ -2,27 +2,11 @@
   %h1.govuk-heading-xl= @page_title
   %span.govuk-hint= t("form.hint.activity.policy_markers.title")
 
-  %details.govuk-details{data:{module:"govuk-details"}}
-    %summary.govuk-details__summary
-      %span.govuk-details__summary-text
-        Explanation of responses
-    .govuk-details__text
-      %h2.govuk-heading-s= t("form.legend.activity.policy_markers.responses.not_assessed")
-      %p= t("form.hint.activity.policy_markers.responses.not_assessed")
-      %h2.govuk-heading-s= t("form.legend.activity.policy_markers.responses.not_targeted")
-      %p= t("form.hint.activity.policy_markers.responses.not_targeted")
-      %h2.govuk-heading-s= t("form.legend.activity.policy_markers.responses.significant_objective")
-      %p= t("form.hint.activity.policy_markers.responses.significant_objective")
-      %h2.govuk-heading-s= t("form.legend.activity.policy_markers.responses.principal_objective")
-      %p= t("form.hint.activity.policy_markers.responses.principal_objective")
-      %h2.govuk-heading-s= t("form.legend.activity.policy_markers.responses.principal_objective_and_in_support_of_an_action_programme")
-      %p= t("form.hint.activity.policy_markers.responses.principal_objective_and_in_support_of_an_action_programme")
-
-  = f.govuk_collection_select :policy_marker_gender, policy_markers_select_options, :code, :name, options: { selected: f.object.policy_marker_gender.to_i }, label: { tag: 'h2', size: 'l' }, hint: { text: t("form.hint.activity.policy_markers.gender").html_safe }
-  = f.govuk_collection_select :policy_marker_climate_change_adaptation, policy_markers_select_options, :code, :name, options: { selected: f.object.policy_marker_climate_change_adaptation.to_i }, label: { tag: 'h2', size: 'l' }, hint: { text: t("form.hint.activity.policy_markers.climate_change_adaptation").html_safe }
-  = f.govuk_collection_select :policy_marker_climate_change_mitigation, policy_markers_select_options, :code, :name, options: { selected: f.object.policy_marker_climate_change_mitigation.to_i }, label: { tag: 'h2', size: 'l' }, hint: { text: t("form.hint.activity.policy_markers.climate_change_mitigation").html_safe }
-  = f.govuk_collection_select :policy_marker_biodiversity, policy_markers_select_options, :code, :name, options: { selected: f.object.policy_marker_biodiversity.to_i }, label: { tag: 'h2', size: 'l' }, hint: { text: t("form.hint.activity.policy_markers.biodiversity").html_safe }
-  = f.govuk_collection_select :policy_marker_desertification, policy_markers_desertification_select_options, :code, :name, options: { selected: f.object.policy_marker_desertification.to_i }, label: { tag: 'h2', size: 'l' }, hint: { text: t("form.hint.activity.policy_markers.desertification").html_safe }
-  = f.govuk_collection_select :policy_marker_disability, policy_markers_select_options, :code, :name, options: { selected: f.object.policy_marker_disability.to_i }, label: { tag: 'h2', size: 'l' }, hint: { text: t("form.hint.activity.policy_markers.disability").html_safe }
-  = f.govuk_collection_select :policy_marker_disaster_risk_reduction, policy_markers_select_options, :code, :name, options: { selected: f.object.policy_marker_disaster_risk_reduction.to_i }, label: { tag: 'h2', size: 'l' }, hint: { text: t("form.hint.activity.policy_markers.disaster_risk_reduction").html_safe }
-  = f.govuk_collection_select :policy_marker_nutrition, policy_markers_select_options, :code, :name, options: { selected: f.object.policy_marker_nutrition.to_i }, label: { tag: 'h2', size: 'l' }, hint: { text: t("form.hint.activity.policy_markers.nutrition").html_safe }
+  = f.govuk_collection_radio_buttons :policy_marker_gender, policy_markers_radio_options, :code, :name, :description, legend: { tag: 'h2', size: 'l' }, hint: { text: t("form.hint.activity.policy_markers.gender").html_safe }
+  = f.govuk_collection_radio_buttons :policy_marker_climate_change_adaptation, policy_markers_radio_options, :code, :name, :description, legend: { tag: 'h2', size: 'l' }, hint: { text: t("form.hint.activity.policy_markers.climate_change_adaptation").html_safe }
+  = f.govuk_collection_radio_buttons :policy_marker_climate_change_mitigation, policy_markers_radio_options, :code, :name, :description, legend: { tag: 'h2', size: 'l' }, hint: { text: t("form.hint.activity.policy_markers.climate_change_mitigation").html_safe }
+  = f.govuk_collection_radio_buttons :policy_marker_biodiversity, policy_markers_radio_options, :code, :name, :description, legend: { tag: 'h2', size: 'l' }, hint: { text: t("form.hint.activity.policy_markers.biodiversity").html_safe }
+  = f.govuk_collection_radio_buttons :policy_marker_desertification, policy_markers_desertification_radio_options, :code, :name, :description, legend: { tag: 'h2', size: 'l' }, hint: { text: t("form.hint.activity.policy_markers.desertification").html_safe }
+  = f.govuk_collection_radio_buttons :policy_marker_disability, policy_markers_radio_options, :code, :name, :description, legend: { tag: 'h2', size: 'l' }, hint: { text: t("form.hint.activity.policy_markers.disability").html_safe }
+  = f.govuk_collection_radio_buttons :policy_marker_disaster_risk_reduction, policy_markers_radio_options, :code, :name, :description, legend: { tag: 'h2', size: 'l' }, hint: { text: t("form.hint.activity.policy_markers.disaster_risk_reduction").html_safe }
+  = f.govuk_collection_radio_buttons :policy_marker_nutrition, policy_markers_radio_options, :code, :name, :description, legend: { tag: 'h2', size: 'l' }, hint: { text: t("form.hint.activity.policy_markers.nutrition").html_safe }
