Hide create child button when there is no report
If a user clicks on the button and there is no editable report, the user will see a
"not authorised" message, so this just changes the frontend to better reflect
reality.

I've also had to preload the parent and the subparent in the controller, as the
`editable_report?` check in the Activity policy needs to check the fund.

--- a/app/views/staff/organisations/_grouped_programmes.html.haml
+++ b/app/views/staff/organisations/_grouped_programmes.html.haml
@@ -25,6 +25,6 @@
                   %td{class: "govuk-table__cell"}
                     = activity.roda_identifier_compound
                   %td{class: "govuk-table__cell"}
-                    - if policy(:project).create?
+                    - if policy(activity).create_child?
                       = link_to(t("action.activity.add_child"), organisation_activity_children_path(activity.extending_organisation, activity), method: :post, class: "govuk-link govuk-!-margin-right-4")
                     = link_to(t("default.link.view"), organisation_activity_details_path(activity.extending_organisation, activity), class: "govuk-link govuk-!-margin-right-4")
