--- a/app/views/staff/shared/activities/_projects.html.haml
+++ b/app/views/staff/shared/activities/_projects.html.haml
@@ -2,7 +2,7 @@
   .govuk-grid-column-full
     %h2.govuk-heading-m
       = t("page_content.activity.projects")
-    - if policy(:project).create?
+    - if policy(activity).create_child?
       = form_tag(organisation_activity_children_path(activity.extending_organisation, activity), method: "post") do
         = submit_tag t("page_content.organisation.button.create_activity"), class: "govuk-button"
     = render partial: '/staff/shared/projects/table', locals: { projects: activities }
