--- a/app/views/staff/budgets/_form.html.haml
+++ b/app/views/staff/budgets/_form.html.haml
@@ -6,6 +6,12 @@
   :description,
   legend: { tag: :h2 }
 
+= f.govuk_collection_radio_buttons :providing_organisation_id,
+  list_of_delivery_partners,
+  :id,
+  :name,
+  legend: { tag: :h2 }
+
 = f.govuk_collection_select :financial_year,
   list_of_financial_years,
   :id,
