Download a spending breakdown CSV
This adds a link next to 'Download report as CSV' that provides a second
download with a different breakdown of the financial information. For
each activity, it includes:

- RODA, BEIS and DP identifiers
- title and description
- programme status and ODA eligibility
- for the most recent 7 quarters, the total spend, total refund and net
- for 13 quarters before those, the total net spend
- for 5 quarters after the report date, the forecast spend

--- a/app/views/staff/reports/_download.haml
+++ b/app/views/staff/reports/_download.haml
@@ -1,2 +1,4 @@
 .govuk-grid-column-one-third.page-actions
   = link_to t("action.report.download.button"), report_path(report_presenter, format: :csv), class: "govuk-link"
+  %br
+  = link_to t("action.report.spending_download.button"), report_spending_breakdown_path(report_presenter, format: :csv), class: "govuk-link"
