--- a/app/views/staff/activity_financials/show.html.haml
+++ b/app/views/staff/activity_financials/show.html.haml
@@ -36,6 +36,11 @@
                     Total spend to date
                   %dd.govuk-summary-list__value
                     = @activity.total_spend
+                .govuk-summary-list__row
+                  %dt.govuk-summary-list__key
+                    Total forecasted spend to date
+                  %dd.govuk-summary-list__value
+                    = @activity.total_forecasted
 
           - if @activity.fund? && policy(:fund).create?
             = render partial: "staff/shared/activities/budgets",
