--- a/app/views/staff/shared/activities/_tab_nav.html.haml
+++ b/app/views/staff/shared/activities/_tab_nav.html.haml
@@ -7,3 +7,4 @@
   = render partial: "staff/shared/activities/tab_nav_item", locals: { tab: "details", path: organisation_activity_details_path(@activity.organisation, @activity) }
   = render partial: "staff/shared/activities/tab_nav_item", locals: { tab: "children", path: organisation_activity_children_path(@activity.organisation, @activity) }
   = render partial: "staff/shared/activities/tab_nav_item", locals: { tab: "comments", path: organisation_activity_comments_path(@activity.organisation, @activity) }
+  = render partial: "staff/shared/activities/tab_nav_item", locals: { tab: "transfers", path: organisation_activity_transfers_path(@activity.organisation, @activity) }
