--- a/app/views/staff/shared/transfers/_index.html.haml
+++ b/app/views/staff/shared/transfers/_index.html.haml
@@ -28,6 +28,8 @@
             %th.govuk-table__header{scope: "col"}
               =t("fields.#{transfer_type}.transfer_amount")
             %th.govuk-table__header{scope: "col"}
+              =t("fields.#{transfer_type}.beis_identifier")
+            %th.govuk-table__header{scope: "col"}
         %tbody.govuk-table__body
           - transfers.each do |transfer|
             %tr.govuk-table__row
@@ -39,6 +41,7 @@
                 %td.govuk-table__cell= transfer.source.organisation.name
                 %td.govuk-table__cell= transfer.source.roda_identifier
               %td.govuk-table__cell= transfer.value
+              %td.govuk-table__cell= transfer.beis_identifier
               %td.govuk-table__cell
                 - if policy(transfer).update?
                   = link_to "Edit", send("edit_activity_#{transfer_type}_path", @activity.id, transfer.id)
