--- a/app/views/staff/outgoing_transfers/confirm.html.haml
+++ b/app/views/staff/outgoing_transfers/confirm.html.haml
@@ -20,6 +20,11 @@
               = @transfer_presenter.destination.organisation.name
           %tr.govuk-table__row
             %th.govuk-table__header{scope: "row"}
+              = t("fields.outgoing_transfer.beis_identifier")
+            %td.govuk-table__cell
+              = @transfer_presenter.beis_identifier
+          %tr.govuk-table__row
+            %th.govuk-table__header{scope: "row"}
               = t("fields.outgoing_transfer.financial_quarter_and_year")
             %td.govuk-table__cell
               = @transfer_presenter.financial_quarter_and_year
@@ -33,10 +38,10 @@
         = f.hidden_field :confirm, value: 1
         = f.hidden_field :source_id
         = f.hidden_field :destination_roda_identifier, value: @transfer.destination_roda_identifier
+        = f.hidden_field :beis_identifier
         = f.hidden_field :financial_quarter
         = f.hidden_field :financial_year
         = f.hidden_field :value
 
         = f.govuk_submit "Yes"
         = f.govuk_submit "No", secondary: true
-
