--- a/app/views/staff/reports/forecasts.html.haml
+++ b/app/views/staff/reports/forecasts.html.haml
@@ -16,3 +16,6 @@
           %h2.govuk-heading-l
             = t("page_content.tab_content.forecasts.heading")
 
+          - if policy(@report_presenter).upload?
+            = link_to t("action.forecast.upload.link"), new_report_forecast_upload_path(@report_presenter), class: "govuk-button govuk-button--secondary govuk-!-margin-left-4"
+
